Fix hero spacing

--- a/src/layout/components/hero.sass
+++ b/src/layout/components/hero.sass
@@ -11,9 +11,12 @@
   opacity: 0
   animation: 0.3s fadeindown 0.2s forwards ease-out
 
-  +media($breakpoint-lg)
+  +media($breakpoint-xl)
     flex-direction: column-reverse
     padding: 0 32px
+    padding-top: $nav-height
+  +media($breakpoint-sm)
+    padding-top: 75px
 
 .hero__left
   display: flex
@@ -22,10 +25,10 @@
   width: 40%
   margin-top: -64px
 
-  +media($breakpoint-lg)
+  +media($breakpoint-xl)
     align-items: center
-    width: 100% 
-    margin-top: 32px
+    width: 100%
+    margin-top: 0 
 
 .hero__header
   font-size: 48px
@@ -33,8 +36,9 @@
   margin-bottom: 0
   max-width: 90vw
   color: $color-black
+  margin-top: 16px
 
-  +media($breakpoint-lg)
+  +media($breakpoint-xl)
     text-align: center
   +media($breakpoint-md)
     font-size: 36px
@@ -53,7 +57,7 @@
 
   +media($breakpoint-lg)
     text-align: center
-  +media($breakpoint-md)
+  +media($breakpoint-lg)
     font-size: 20px
   +media($breakpoint-sm)
     font-size: 18px
@@ -72,6 +76,7 @@
   text-decoration: none
   color: white
   max-width: 90vw
+  border-radius: 3px
 
   +media($breakpoint-sm)
     font-size: 24px
@@ -79,19 +84,25 @@
 .hero__image
   margin-top: 32px
   margin-bottom: -32px
-  width: 392px
-  height: 600px
-  max-width: 90vw
-  max-height: 60vh
+  width: 25vw
+  height: 32vw
   margin-right: -16px
 
+  +media($breakpoint-xl)
+    margin: 0
+    margin-top: -64px
+    height: 50vh
+    width: 40vh
   +media($breakpoint-md)
-    width: 360px
-    height: 460px
+    height: 60vw
+    width: 50vw
   +media($breakpoint-sm)
-    width: 240px
-    height: 300px
-    margin-top: 24px
+    height: 75vw
+    width: 60vw
   +media($breakpoint-xs)
-    width: 160px
-    height: 200px
+    width: 55vw
+    height: 73vw
+
+.hero__svg
+  width: 100%
+  height: 100%
