--- a/src/layout/config/_variables.sass
+++ b/src/layout/config/_variables.sass
@@ -1,3 +1,3 @@
 $nav-height: 95px
 $footer-height: 64px
-$hero-padding: 150px
+$hero-padding: 100px
